Added quick benchmark between the two regressions explored

--- a/Recruitement_challenge.ipynb
+++ b/Recruitement_challenge.ipynb
@@ -2505,7 +2505,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this method I obtained a very similar accuracy to the linear regression method and since the dimensionality of the dataset is not too big the preformance is also very good."
+    "With this method I obtained a very similar accuracy to the linear regression method and since the dimensionality of the dataset is not too big the preformance is ok but nowere near as what can be achieved by a simple linear regression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k-NN regression benchmark: 100 loops, best of 3: 9.79 ms per loop\n",
+      " linear regression benchmark: 1000 loops, best of 3: 202 µs per loop\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"k-NN regression benchmark: \",\n",
+    "%timeit knn_regr.predict(test_X)\n",
+    "def logpr(para2,para4):\n",
+    "    return 0.005*para2 + 0.0325 * para4 + 2.0484\n",
+    "print \"linear regression benchmark: \",\n",
+    "%timeit logpr(test_X.para2,test_X.para4)"
    ]
   },
   {
